# Cubot

./: CMakeLists.txt  README.md  colorParams.xml
inc/: control.hpp  cube.h  cube.hpp  uart.h
kociemba_genLib/: CMakeLists.txt
kociemba_genLib/include/: clr_rec.h  search.h
src/: attemp_noturn.cpp  cmd.cpp  control.cpp  cube.cpp  main.cpp  solveTest.cpp  uart.c
